--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,22 @@
   -webkit-text-fill-color: transparent;
 }
 
+@keyframes timer_alert {
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.danger-text {
+  color: #f53e3e;
+  animation-name: timer_alert;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
 .danger {
   background-color: #e57373 !important;
 }
