--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,26 +1,28 @@
-.styleLink {
+@import 'abstracts/global';
+@import 'base/global';
+@import 'components/global';
+@import 'pages/global';
+@import 'vendors/global';
+
+.style-link {
   text-decoration: none;
   font-style: none;
   color: inherit;
 }
 
-.gradientText {
+.gradient-text {
   /* font-size: 72px; */
-  font-weight: bolder !important;
-  background: -webkit-linear-gradient(
-    right,
-    #ffd53d 10%,
-    #fe6b8b 30%,
-    #42206d 90%
-  );
+  font-weight: 700 !important;
+  background: linear-gradient(to right, #ffd53d 10%, #fe6b8b 30%, #42206d 90%);
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-@keyframes timer_alert {
+@keyframes timer-alert {
   50% {
     transform: scale(1.1);
   }
+
   100% {
     transform: scale(1);
   }
@@ -28,7 +30,7 @@
 
 .danger-text {
   color: #f53e3e;
-  animation-name: timer_alert;
+  animation-name: timer-alert;
   animation-duration: 1s;
   animation-iteration-count: infinite;
 }
@@ -36,12 +38,13 @@
 .danger {
   background-color: #e57373 !important;
 }
+
 .success {
   background-color: #81c784 !important;
 }
 
 .outlined-answer {
-  border: 2px solid black !important;
+  border: 2px solid #000 !important;
 }
 
 .question-selected {
